add /tmp models folder with softlink

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -42,7 +42,8 @@
     "#create softlink to /tmp/outputs for storing images\n",
     "#contents of /tmp folder will be deleted when each session ends\n",
     "!ln -s /tmp/outputs stable-diffusion-webui/outputs\n",
-    "!ln -s /tmp ~/sagemaker-studiolab-notebooks/tmp"
+    "!ln -s /tmp ~/sagemaker-studiolab-notebooks/tmp\n",
+    "!ln -s /tmp/models stable-diffusion-webui/models/Stable-diffusion/tmp_models"
    ]
   },
   {
@@ -54,7 +55,9 @@
     "# Installation: Download model(s) from huggingface\n",
     "***You only need to do this once on your SageMaker SL account***\n",
     "\n",
-    "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the `~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/` folder"
+    "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the `~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/` folder\n",
+    "\n",
+    "To save disk space, you can move models to /tmp/models and restart the webui. These models will be deleted when the runtime ends"
    ]
   },
   {
@@ -408,6 +411,7 @@
     "\n",
     "# create /tmp/outputs folder for storing generated images for this session\n",
     "!mkdir -p /tmp/outputs\n",
+    "!mkdir -p /tmp/models\n",
     "\n",
     "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
     "#ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --share\\\"\"\n",
