--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -42,7 +42,9 @@
     "#create softlink to /tmp/outputs for storing images\n",
     "#contents of /tmp folder will be deleted when each session ends\n",
     "!ln -s /tmp/outputs stable-diffusion-webui/outputs\n",
+    "#create softlink to /tmp in ~/sagemaker-studiolab-notebooks/\n",
     "!ln -s /tmp ~/sagemaker-studiolab-notebooks/tmp\n",
+    "#create softlink to /tmp/models in stable-diffusion-webui/models/Stable-diffusion/\n",
     "!ln -s /tmp/models stable-diffusion-webui/models/Stable-diffusion/tmp_models"
    ]
   },
@@ -57,7 +59,7 @@
     "\n",
     "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the `~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/` folder\n",
     "\n",
-    "To save disk space, you can move models to /tmp/models and restart the webui. These models will be deleted when the runtime ends"
+    "To save disk space, you can move models to `/tmp/models` and restart the webui. These models will be deleted when the runtime ends"
    ]
   },
   {
