save hf token to filesystem

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -91,7 +91,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Huggingface token"
+    "#### Huggingface token\n",
+    "You only have to enter this once, as the token will persist in ~/.huggingface/token across sessions"
    ]
   },
   {
@@ -139,7 +140,28 @@
    },
    "outputs": [],
    "source": [
-    "user_header = f\"\\\"Authorization: Bearer {token_textbox.value}\\\"\"\n",
+    "huggingface_token = \"\"\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "token_path = os.path.expanduser('~/.huggingface/token')\n",
+    "\n",
+    "if os.path.isfile(token_path):\n",
+    "    with open(token_path) as f:\n",
+    "        lines = f.readlines()\n",
+    "    huggingface_token = lines[0]\n",
+    "else:\n",
+    "    try:\n",
+    "        token_textbox\n",
+    "    except NameError:\n",
+    "        raise RuntimeError(\"Enter Huggingface token\")\n",
+    "    else:\n",
+    "        !mkdir -p ~/.huggingface\n",
+    "        !echo -n \"{token_textbox.value}\" > ~/.huggingface/token\n",
+    "        huggingface_token = token_textbox.value\n",
+    "\n",
+    "user_header = f\"\\\"Authorization: Bearer {huggingface_token}\\\"\"\n",
+    "\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
     "\n",
     "# Model 1.4\n",
