--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -164,6 +164,8 @@
     "\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
     "\n",
+    "# Choose here which model(s) to download #############################################################################\n",
+    "\n",
     "# Model 1.4\n",
     "#!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt\n",
     "\n",
