--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -222,9 +222,11 @@
     "tags": []
    },
    "source": [
-    "###  Optional: Download waifu division model and VAE\n",
+    "###  Optional: Download various models\n",
     "\n",
-    "From https://huggingface.co/hakurei/waifu-diffusion-v1-4"
+    "Change values from False to True to download a model\n",
+    "\n",
+    "A Huggingface token is not necessary for these downloads"
    ]
   },
   {
@@ -233,12 +235,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
-    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/models/wd-1-3-penultimate-ucg-cont.ckpt\n",
+    "############################################################\n",
     "\n",
-    "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
-    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\n",
-    "!wget --header={user_header} https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt"
+    "download_to_temp_folder = True # models will be deleted when the SageMaker session ends \n",
+    "\n",
+    "anything_v3 = True # Anything V3 model with VAE\n",
+    "anything_xtron = False # AnythingXtron model\n",
+    "gigachad = False # Gigachad model\n",
+    "midjourney_v4 = False # Midjourney V4 Diffusion\n",
+    "waifu = False # Waifu Division with Anime VAE\n",
+    "modidi = False # Modern Disney Diffusion\n",
+    "\n",
+    "############################################################\n",
+    "\n",
+    "if download_to_temp_folder:\n",
+    "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/tmp_models\n",
+    "else:\n",
+    "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "\n",
+    "if anything_v3:\n",
+    "    !wget https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0-pruned.ckpt\n",
+    "    !wget https://huggingface.co/Linaqruf/anything-v3.0/resolve/main/Anything-V3.0.vae.pt -O Anything-V3.0-pruned.vae.pt\n",
+    "\n",
+    "if anything_xtron:\n",
+    "    !wget https://huggingface.co/CrasHthe2nd2/anything-tron/resolve/main/anythingXtron.ckpt\n",
+    "    !wget https://huggingface.co/CrasHthe2nd2/anything-tron/resolve/main/Anything-V3.0.vae.pt -O anythingXtron.vae.pt\n",
+    "\n",
+    "if gigachad:\n",
+    "    !wget https://huggingface.co/SpiteAnon/gigachad-diffusion/resolve/main/gigachad_2000.ckpt\n",
+    "\n",
+    "if midjourney_v4:\n",
+    "    !wget https://huggingface.co/prompthero/midjourney-v4-diffusion/resolve/main/mdjrny-v4.ckpt\n",
+    "\n",
+    "if modidi:\n",
+    "    !wget https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt\n",
+    "\n",
+    "# waifu division\n",
+    "if waifu:\n",
+    "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
+    "    !wgethttps://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/models/wd-1-3-penultimate-ucg-cont.ckpt\n",
+    "\n",
+    "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
+    "    !wget https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\n",
+    "    !wget https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt"
    ]
   },
   {
