--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -54,10 +54,12 @@
     "id": "F0EINk5M0s-w"
    },
    "source": [
-    "# Installation: Download model(s) from huggingface\n",
+    "# Installation: Download model(s) from Huggingface\n",
     "***You only need to do this once on your SageMaker SL account***\n",
     "\n",
     "Alternatively you can use the JupyterLab file browser to upload one or more .ckpt files to the `~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/` folder\n",
+    "\n",
+    "There are optional model downloads below this cell, where a Huggingface token is not necessary\n",
     "\n",
     "To save disk space, you can move models to `/tmp/models` and restart the webui. These models will be deleted when the runtime ends"
    ]
