--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -251,6 +251,7 @@
     "############################################################\n",
     "\n",
     "if download_to_temp_folder:\n",
+    "    !mkdir -p /tmp/models\n",
     "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/tmp_models\n",
     "else:\n",
     "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
