add localtunnel support

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -431,7 +431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run: Enter ngrok auth token\n"
+    "# Run: Enter ngrok auth token (optional)\n",
+    "If you have a ngrok auth token, you can enter it here. Otherwise don't run this cell, but run the next cell to install [localtunnel](https://theboroer.github.io/localtunnel-www/)"
    ]
   },
   {
@@ -447,6 +448,46 @@
     "    description='Token:',\n",
     ")\n",
     "ngrok_token_textbox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run: Launch localtunnel reverse proxy in the background"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "VERSION=\"v18.12.1\"\n",
+    "DISTRO=\"linux-x64\"\n",
+    "\n",
+    "# download archive to /tmp\n",
+    "%cd /tmp\n",
+    "!wget https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz\n",
+    "!tar -Jxf node-v18.12.1-linux-x64.tar.xz\n",
+    "\n",
+    "#%env PATH=/home/studio-lab-user/.conda/envs/default/bin:/opt/conda/condabin:/opt/conda/bin:/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n",
+    "\n",
+    "# add /tmp/node- to path\n",
+    "current_path = os.environ[\"PATH\"]\n",
+    "new_path = \"/tmp/node-\" + VERSION + \"-\" + DISTRO + \"/bin:\" + current_path\n",
+    "%env PATH={new_path}\n",
+    "\n",
+    "# install localtunnel via npm\n",
+    "!npm install -g localtunnel\n",
+    "\n",
+    "# launch localtunnel\n",
+    "!nohup lt --port 7860 > srv.txt 2>&1 &\n",
+    "time.sleep(2)\n",
+    "print(\"The webui will run on this URL:\")\n",
+    "!grep -o 'https[^ ]*' /content/srv.txt \n",
+    "print(\"Run the next cell to launch the webui before connecting\")"
    ]
   },
   {
