add localtunnel support

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -38,14 +38,14 @@
    "outputs": [],
    "source": [
     "%cd ~/sagemaker-studiolab-notebooks/\n",
-    "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+    "!git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
     "#create softlink to /tmp/outputs for storing images\n",
     "#contents of /tmp folder will be deleted when each session ends\n",
-    "!ln -s /tmp/outputs stable-diffusion-webui/outputs\n",
+    "!ln -vs /tmp/outputs stable-diffusion-webui/outputs\n",
     "#create softlink to /tmp in ~/sagemaker-studiolab-notebooks/\n",
-    "!ln -s /tmp ~/sagemaker-studiolab-notebooks/tmp\n",
+    "!ln -vs /tmp ~/sagemaker-studiolab-notebooks/tmp\n",
     "#create softlink to /tmp/models in stable-diffusion-webui/models/Stable-diffusion/\n",
-    "!ln -s /tmp/models stable-diffusion-webui/models/Stable-diffusion/tmp_models"
+    "!ln -vs /tmp/models stable-diffusion-webui/models/Stable-diffusion/tmp_models"
    ]
   },
   {
@@ -454,7 +454,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run: Launch localtunnel reverse proxy in the background"
+    "# Run: Launch localtunnel reverse proxy in the background\n",
+    "This will temporarily install nodejs and localtunnel. This cells needs to be run once every session."
    ]
   },
   {
@@ -464,6 +465,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import multiprocessing\n",
+    "import time\n",
+    "\n",
     "VERSION=\"v18.12.1\"\n",
     "DISTRO=\"linux-x64\"\n",
     "\n",
@@ -483,10 +487,14 @@
     "!npm install -g localtunnel\n",
     "\n",
     "# launch localtunnel\n",
-    "!nohup lt --port 7860 > srv.txt 2>&1 &\n",
+    "\n",
+    "def run_forever():\n",
+    "    !lt --port 7860 > srv.txt\n",
+    "\n",
+    "multiprocessing.Process(target=run_forever).start()\n",
     "time.sleep(2)\n",
     "print(\"The webui will run on this URL:\")\n",
-    "!grep -o 'https[^ ]*' /content/srv.txt \n",
+    "!grep -o 'https[^ ]*' srv.txt \n",
     "print(\"Run the next cell to launch the webui before connecting\")"
    ]
   },
@@ -522,8 +530,10 @@
     "!mkdir -p /tmp/outputs\n",
     "!mkdir -p /tmp/models\n",
     "\n",
-    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
-    "#ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --share\\\"\"\n",
+    "if 'ngrok_token_textbox' in locals():\n",
+    "    ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
+    "else:\n",
+    "    ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \"\\\"\"\n",
     "\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
     "!COMMANDLINE_ARGS=$ARGS REQS_FILE=\"requirements.txt\" python launch.py\n"
