remove failed localtunnel support

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -431,8 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run: Enter ngrok auth token (optional)\n",
-    "If you have a ngrok auth token, you can enter it here. Otherwise don't run this cell, but run the next cell to install [localtunnel](https://theboroer.github.io/localtunnel-www/)"
+    "# Run: Enter ngrok auth token\n"
    ]
   },
   {
@@ -448,54 +447,6 @@
     "    description='Token:',\n",
     ")\n",
     "ngrok_token_textbox"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run: Launch localtunnel reverse proxy in the background\n",
-    "This will temporarily install nodejs and localtunnel. This cells needs to be run once every session."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import multiprocessing\n",
-    "import time\n",
-    "\n",
-    "VERSION=\"v18.12.1\"\n",
-    "DISTRO=\"linux-x64\"\n",
-    "\n",
-    "# download archive to /tmp\n",
-    "%cd /tmp\n",
-    "!wget https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz\n",
-    "!tar -Jxf node-v18.12.1-linux-x64.tar.xz\n",
-    "\n",
-    "#%env PATH=/home/studio-lab-user/.conda/envs/default/bin:/opt/conda/condabin:/opt/conda/bin:/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n",
-    "\n",
-    "# add /tmp/node- to path\n",
-    "current_path = os.environ[\"PATH\"]\n",
-    "new_path = \"/tmp/node-\" + VERSION + \"-\" + DISTRO + \"/bin:\" + current_path\n",
-    "%env PATH={new_path}\n",
-    "\n",
-    "# install localtunnel via npm\n",
-    "!npm install -g localtunnel\n",
-    "\n",
-    "# launch localtunnel\n",
-    "\n",
-    "def run_forever():\n",
-    "    !lt --port 7860 > srv.txt\n",
-    "\n",
-    "multiprocessing.Process(target=run_forever).start()\n",
-    "time.sleep(2)\n",
-    "print(\"The webui will run on this URL:\")\n",
-    "!grep -o 'https[^ ]*' srv.txt \n",
-    "print(\"Run the next cell to launch the webui before connecting\")"
    ]
   },
   {
@@ -526,14 +477,30 @@
     "\n",
     "##################################\n",
     "\n",
+    "# import multiprocessing\n",
+    "# import time\n",
+    "\n",
+    "# function to run localtunnel in the background if no ngrok auth token was entered\n",
+    "# def run_forever():\n",
+    "#     !lt --port 7860 > /tmp/localtunnel.txt\n",
+    "#     while True:\n",
+    "#         time.sleep(42)\n",
+    "\n",
     "# create /tmp/outputs folder for storing generated images for this session\n",
     "!mkdir -p /tmp/outputs\n",
     "!mkdir -p /tmp/models\n",
     "\n",
-    "if 'ngrok_token_textbox' in locals():\n",
-    "    ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
-    "else:\n",
-    "    ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \"\\\"\"\n",
+    "# if 'ngrok_token_textbox' in locals():\n",
+    "#     ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
+    "# else:\n",
+    "#     ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \"\\\"\"\n",
+    "#     # launch localtunnel\n",
+    "#     multiprocessing.Process(target=run_forever).start()\n",
+    "#     time.sleep(2)\n",
+    "#     print(\"The webui will run on this URL:\")\n",
+    "#     !grep -o 'https[^ ]*' /tmp/localtunnel.txt\n",
+    "\n",
+    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
     "\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
     "!COMMANDLINE_ARGS=$ARGS REQS_FILE=\"requirements.txt\" python launch.py\n"
