save ngrok auth token to filesystem

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -477,32 +477,44 @@
     "\n",
     "##################################\n",
     "\n",
-    "# import multiprocessing\n",
-    "# import time\n",
+    "import subprocess\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "# function to run localtunnel in the background if no ngrok auth token was entered\n",
-    "# def run_forever():\n",
-    "#     !lt --port 7860 > /tmp/localtunnel.txt\n",
-    "#     while True:\n",
-    "#         time.sleep(42)\n",
+    "ngrok_token = \"\"\n",
+    "\n",
+    "# Check if ngrok token exists\n",
+    "if 'ngrok_token_textbox' in locals():\n",
+    "    print(\"Saving ngrok auth token to ~/.ngrok_token\")\n",
+    "    !echo -n \"{ngrok_token_textbox.value}\" > ~/.ngrok_token\n",
+    "    ngrok_token = ngrok_token_textbox.value\n",
+    "\n",
+    "else:\n",
+    "    full_path = os.path.expanduser('~/.ngrok_token')\n",
+    "    if not os.path.exists(full_path):\n",
+    "        #print('\u001b[1;31mNo ngrok auth token found')\n",
+    "        sys.exit(\"No ngrok auth token found\")\n",
+    "    else:\n",
+    "        with open(full_path) as f:\n",
+    "            ngrok_token = f.readline()\n",
+    "        print(\"Using ngrok auth token from ~/.ngrok_token\")\n",
     "\n",
     "# create /tmp/outputs folder for storing generated images for this session\n",
     "!mkdir -p /tmp/outputs\n",
     "!mkdir -p /tmp/models\n",
     "\n",
-    "# if 'ngrok_token_textbox' in locals():\n",
-    "#     ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
-    "# else:\n",
-    "#     ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \"\\\"\"\n",
-    "#     # launch localtunnel\n",
-    "#     multiprocessing.Process(target=run_forever).start()\n",
-    "#     time.sleep(2)\n",
-    "#     print(\"The webui will run on this URL:\")\n",
-    "#     !grep -o 'https[^ ]*' /tmp/localtunnel.txt\n",
+    "# show free disk space\n",
+    "print(\"Free disk space:\")\n",
+    "print(subprocess.check_output('df -h | grep Avail', shell=True))\n",
+    "print(subprocess.check_output('df -h | grep home', shell=True))\n",
+    "print(subprocess.check_output('df -h | grep overlay', shell=True))\n",
+    "print(\" \")\n",
+    "print(\" \")\n",
+    "print(\" \")\n",
     "\n",
-    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token_textbox.value + \"\\\"\"\n",
-    "\n",
+    "# launch webui\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
+    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token + \"\\\"\"\n",
     "!COMMANDLINE_ARGS=$ARGS REQS_FILE=\"requirements.txt\" python launch.py\n"
    ]
   },
