--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -431,7 +431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run: Enter ngrok auth token\n"
+    "# Run: Enter ngrok auth token\n",
+    "You only need to run this once, until you delete your auth token on ngrok.com"
    ]
   },
   {
