prevent mess in console

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -515,7 +515,7 @@
     "\n",
     "# launch webui\n",
     "%cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui\n",
-    "ARGS = \"\\\"--gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token + \"\\\"\"\n",
+    "ARGS = \"\\\"--disable-console-progressbars --gradio-debug --gradio-auth \" + WEBUI_USERNAME + \":\" + WEBUI_PASSWORD + \" --ngrok \" + ngrok_token + \"\\\"\"\n",
     "!COMMANDLINE_ARGS=$ARGS REQS_FILE=\"requirements.txt\" python launch.py\n"
    ]
   },
