--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -247,6 +247,8 @@
     "midjourney_v4 = False # Midjourney V4 Diffusion\n",
     "waifu = False # Waifu Division with Anime VAE\n",
     "modidi = False # Modern Disney Diffusion\n",
+    "nitrodiffusion = False # Multi-Style Model trained from scratch\n",
+    "sd15_cloned = False # Cloned version of model 1.5 (not token necessary)\n",
     "\n",
     "############################################################\n",
     "\n",
@@ -273,6 +275,12 @@
     "if modidi:\n",
     "    !wget https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt\n",
     "\n",
+    "if nitrodiffusion:\n",
+    "    !wget https://huggingface.co/nitrosocke/Nitro-Diffusion/resolve/main/nitroDiffusion-v1.ckpt\n",
+    "\n",
+    "if sd15_cloned:\n",
+    "    !wget https://huggingface.co/acheong08/SD-V1-5-cloned/resolve/main/v1-5-pruned-emaonly.ckpt\n",
+    "\n",
     "# waifu division\n",
     "if waifu:\n",
     "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/Stable-diffusion/\n",
@@ -281,6 +289,29 @@
     "    %cd ~/sagemaker-studiolab-notebooks/stable-diffusion-webui/models/VAE/\n",
     "    !wget https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\n",
     "    !wget https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sources: \n",
+    "\n",
+    "https://huggingface.co/SpiteAnon/gigachad-diffusion\n",
+    "\n",
+    "https://huggingface.co/CrasHthe2nd2/anything-tron\n",
+    "\n",
+    "https://huggingface.co/Linaqruf/anything-v3.0\n",
+    "\n",
+    "https://huggingface.co/prompthero/midjourney-v4-diffusion\n",
+    "\n",
+    "https://huggingface.co/hakurei/waifu-diffusion-v1-4\n",
+    "\n",
+    "https://huggingface.co/nitrosocke/mo-di-diffusion\n",
+    "\n",
+    "https://huggingface.co/nitrosocke/Nitro-Diffusion\n",
+    "\n",
+    "https://huggingface.co/acheong08"
    ]
   },
   {
