--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -249,6 +249,7 @@
     "modidi = False # Modern Disney Diffusion\n",
     "nitrodiffusion = False # Multi-Style Model trained from scratch\n",
     "sd15_cloned = False # Cloned version of model 1.5 (not token necessary)\n",
+    "secret_ai = False # Anime/furry model with VAE and hypernetworks\n",
     "\n",
     "############################################################\n",
     "\n",
