change default settings

--- a/StableDiffusionUI_SageMakerSL.ipynb
+++ b/StableDiffusionUI_SageMakerSL.ipynb
@@ -55,7 +55,7 @@
     "!echo \"a photo of a [filewords]\" >textual_inversion_templates/hypernetwork.txt\n",
     "!sed -i 's/use_dropout=False/use_dropout=True/' modules/hypernetworks/ui.py\n",
     "!sed -i 's/value=\"0.00001\"/value=\"{learning_rate}\"/' modules/ui.py\n",
-    "!sed -i -E 's/dataset_directory = gr.Textbox\\(/dataset_directory = gr.Textbox\\(value=\\\"\\/content\\/processed_images\\\" /' modules/ui.py\n",
+    "!sed -i -E 's/dataset_directory = gr.Textbox\\(/dataset_directory = gr.Textbox\\(value=\\\"\\/content\\/processed_images\\\", /' modules/ui.py\n",
     "!sed -i 's/style_filewords.txt/hypernetwork.txt/' modules/ui.py\n",
     "\n",
     "# install extensions (not necessary)\n",
